@@ -1,0 +1,11 @@
+#filters
+  - Setting.task_due_date.each do |value, key|
+    .check_box{:style => "border-bottom: 1px silver dotted;"}
+      %div{:style => "float:right;"}
+        = @task_due_date_total[key]
+      = task_due_date_checbox(key, @task_due_date_total[key]) << " " << value
+
+  .check_box{:style => "border-bottom: 1px silver dotted;"}
+    %div{:style => "float:right;"}
+      %b= @task_due_date_total[:all]
+    %b Total Tasks
